--- a/src/ui/framework/TextHTML.pug
+++ b/src/ui/framework/TextHTML.pug
@@ -1,6 +1,7 @@
 script.
 	export html = null
 	# Replace hardcoded "reddit.com" links with relative links --- if someone is using our client, they surely want Reddit links to open in our client as well.
-	formatted = html.replace(/<a href="https?:\/\/[^.]+.reddit.com\/(?<path>[^"]*)"[^>]*>/g, '<a href="/$<path>">')
+	# Display pictures instead of links where New Reddit does so.
+	formatted = html.replace(/<a href="https?:\/\/[^.]+.reddit.com\/(?<path>[^"]*)"[^>]*>/g, '<a href="/$<path>">').replace(/<a href="https:\/\/preview.redd.it\/(?<filepath>[^"]+)">(?<linktext>[^<]*)<\/a>/g, '<a href="https://preview.redd.it/$<filepath>" target="_blank"><img src="https://preview.redd.it/$<filepath>"></a>')
 
 {@html formatted}
