--- a/src/ui/page/post/PostComment.pug
+++ b/src/ui/page/post/PostComment.pug
@@ -1,6 +1,5 @@
 script.
 	import api from '../../../api/index.js'
-	import { Time } from '../../../lib/index.js'
 	
 	import Button from '../../framework/Button.pug'
 	import TextHTML from '../../framework/TextHTML.pug'
@@ -8,6 +7,7 @@ script.
 	import UserAvatar from '../user/UserAvatar.pug'
 	import UserDistinguish from '../user/UserDistinguish.pug'
 
+	import PostAge from './PostAge.pug'
 	import PostScore from './PostScore.pug'
 	
 	export out_of_context = false
@@ -34,15 +34,14 @@ script.
 		<!-- 'comment' role is draft status and not recognized yet -->
 		<!-- svelte-ignore a11y-unknown-role -->
 		article.comment(role='comment')
-			div
-			div
-				PostScore(awards={comment.all_awardings} controversiality={comment.controversiality} upload_vote={(vote) => api.submit(api.ID('comment_vote', short_id), { numerical_vote: vote })} value={!comment.score_hidden && comment.score} vote={comment.likes == null ? 0 : comment.likes ? 1 : -1})
-			div
+			header
 				UserAvatar(name={comment.author})
 				{#if comment.distinguished || comment.is_submitter}
 					UserDistinguish(type={comment.distinguished || 'submitter'})
-			.comment-text(title='posted {Time.sToRelDateStr(comment.created_utc, { abbr: false })} ago ({Time.sToAbsDateStr(comment.created_utc)})')
-				TextHTML(html={comment.body_html})
+				PostAge(created={comment.created_utc} edited={comment.edited})
+			TextHTML(html={comment.body_html})
+			footer
+				PostScore(awards={comment.all_awardings} controversiality={comment.controversiality} upload_vote={(vote) => api.submit(api.ID('comment_vote', short_id), { numerical_vote: vote })} value={!comment.score_hidden && comment.score} vote={comment.likes == null ? 0 : comment.likes ? 1 : -1})
 		{#if !out_of_context && comment.replies.length > 0}
 			{#key comment.replies}
 				ol.comment-replies
@@ -58,11 +57,30 @@ script.
 style.
 	.comment
 		align-items flex-start
-		display grid
-		gap 0 10px
-		grid-template-columns 20px 1fr
-		grid-template-rows 24px 1fr
-		justify-items flex-start
+		display flex
+		flex-flow column nowrap
+		gap 3px
+	:global(.comment img)
+		border-radius 9px
+		margin 1px
+		max-height 9em
+		width auto
+	:global(.comment > .md)
+		background var(--c-con-strong)
+		border-radius 12px
+		border-top-left-radius 2px
+		padding 12px
+	.comment > footer
+		align-items center
+		align-self stretch
+		display flex
+		gap 1ch
+		justify-content flex-end
+		padding 0 1ch
+	.comment > header
+		align-items center
+		display flex
+		gap 1ch
 	.comment-clip
 		background #494949
 		border-radius 10px
@@ -70,19 +88,7 @@ style.
 	.comment-more-replies
 		margin-top 20px
 	.comment-replies
-		border-left 1px solid rgba(0,0,0,0.1)
+		border-left 1px solid var(--c-con-norm)
 		margin-left 9px
 		margin-top 10px
 		padding-left 12px
-	.comment-text
-		background var(--c-con-norm)
-		border-radius 10px
-		padding 1ch
-	:global(.comment-text img)
-		margin-block-start 1px
-		margin-inline-start 1px
-		max-height 9em
-		width auto
-	.comment-tree
-		display block
-		margin-top 10px
