--- a/src/ui/page/post/PostTag.pug
+++ b/src/ui/page/post/PostTag.pug
@@ -19,6 +19,7 @@ style.
 		font-feature-settings 'cpsp' 1
 		padding 0 0.25em
 		text-transform uppercase
+		user-select none
 	.post-tag-archived
 		background tan
 		color white
