--- a/src/ui/page/user/UserDistinguish.pug
+++ b/src/ui/page/user/UserDistinguish.pug
@@ -20,6 +20,7 @@ style.
 		font-feature-settings 'cpsp' 1
 		padding 0 0.25em
 		text-transform uppercase
+		user-select none
 	.user-distinguish-admin
 		background orangered
 		color white
