--- a/src/ui/page/wiki/Wiki.pug
+++ b/src/ui/page/wiki/Wiki.pug
@@ -22,7 +22,7 @@ script.
 	)
 
 svelte:head
-	title r/{subreddit_name} - Wiki - {page_name}
+	title  r/{subreddit_name} - Wiki - {page_name}
 {#if error}
 	{#if error instanceof api.errors.ServerError}
 		Base404(path="/r/{subreddit_name}/wiki/{page_name}{revision_id ? '?v=' + revision_id : ''}")
@@ -32,15 +32,11 @@ svelte:head
 	article.wiki-page
 		h1.wiki-page-name {subreddit_name} / {page_name.split('/').join(' / ')}
 		.wiki-page-info
-			.wiki-page-edit-date Revised {Time.sToRelDateStr(page.revision_date, { abbr: false })} ago
+			.wiki-page-edit-date Revised {Time.sToRelTimeStr(page.revision_date, { abbr: false })} ago
 		article.wiki-page-body
 			TextHTML(html={page.content_html})
 
 style.
-	.wiki-page
-		margin-left 140px
-		padding 6em
-		width 50vw
 	.wiki-page-body
 		margin-top 3em
 	.wiki-page-info
@@ -61,7 +57,7 @@ style.
 		overflow auto
 		padding 8em 0
 		position fixed
-		right 70vw
+		left 70vw
 		top 0
 		&::-webkit-scrollbar
 			display none
